Edit README.md, improve compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 version: "3.0"
 services:
-
-  bot:
-    image: vladkmrdnv/water_level_of_the_oka_river_bot:latest
+  water_river_bot:
+    build:
+      context: .
+      args:
+        TELEGRAM_API_KEY: ''
     restart: always
