Use token proper

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,6 @@ services:
   water_river_bot:
     build:
       context: .
-      args:
-        TELEGRAM_API_KEY: ''
+    environment:
+      TOKEN: ''
     restart: always
