--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,35 +7,98 @@ on:
       - 'v*.*'
 
 env:
-  IMAGE_NAME: vladkmrdnv/water_level_of_the_oka_river_bot
-  TELEGRAM_API_KEY: ${{ secrets.TELEGRAM_API_KEY }}
+  REGISTRY_IMAGE: vladkmrdnv/water_level_of_the_oka_river_bot
 
 jobs:
-  build-docker-image:
-
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
     steps:
-      - name: Get latest release version number
-        id: get_version
-        uses: battila7/get-version-action@v2
+      - name: Prepare
+        run: |
+          platform=${{ matrix.platform }}
+          echo "PLATFORM_PAIR=${platform////-}" >> $GITHUB_ENV
 
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Docker login
-        uses: docker/login-action@v1
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2.7.0
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v2
         with:
           context: .
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ steps.get_version.outputs.version }}
-          build-args: "TELEGRAM_API_KEY=${{ env.TELEGRAM_API_KEY }}"
+          platforms: ${{ matrix.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+
+      - name: Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+      - name: Upload digest
+        uses: actions/upload-artifact@v2
+        with:
+          name: digests-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Download digests
+        uses: actions/download-artifact@v2
+        with:
+          name: digests-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digests
+          extract: true
+          retention-days: 1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Create manifest list and push
+        working-directory: /tmp/digests
+        run: |
+          docker buildx imagetools create --tag ${{ env.REGISTRY_IMAGE }}:latest $(cat latest_digest)
+          docker buildx imagetools create --tag ${{ env.REGISTRY_IMAGE }}:latest $(cat $GITHUB_SHA)
+
+      - name: Inspect image
+        run: |
+          docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
