--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
           - linux/amd64
           - linux/arm64
     steps:
-      - name: Prepare
+      - name: Set up environment
         run: |
           platform=${{ matrix.platform }}
           echo "PLATFORM_PAIR=${platform////-}" >> $GITHUB_ENV
@@ -73,7 +73,7 @@ jobs:
       - name: Download digests
         uses: actions/download-artifact@v2
         with:
-          name: digests-${{ env.PLATFORM_PAIR }}
+          name: digests-*
           path: /tmp/digests
           extract: true
           retention-days: 1
