--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,7 @@ on:
 
 env:
   REGISTRY_IMAGE: vladkmrdnv/water_level_of_the_oka_river_bot
+  DIGEST_PATH: /tmp/digests
 
 jobs:
   build:
@@ -62,21 +63,24 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: digests-${{ env.PLATFORM_PAIR }}
-          path: /tmp/digests/*
+          path: ${{ env.DIGEST_PATH }}/*
           if-no-files-found: error
           retention-days: 1
 
   merge:
     runs-on: ubuntu-latest
     needs: build
+    if: success()
     steps:
       - name: Download digests
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
-          name: digests-*
-          path: /tmp/digests
           extract: true
+          path: ${{ env.DIGEST_PATH }}
           retention-days: 1
+
+      - name: Display structure of downloaded files
+        run: ls -R ${{ env.DIGEST_PATH }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
